--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-minimal
+remote_theme: fongandrew/hydeout
+title: Unqualified Movie Critic
+description: A movie blog by Avery Pierce
