Add post for The Room

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: fongandrew/hydeout
-title: Unqualified Movie Critic
-description: A movie blog by Avery Pierce
+title: Clueless Movie Critic
+description: A bad movie blog.
